# training

./: .travis.yml  README.md  pom.xml  training.code-workspace
.github/workflows/: ci.yml
cpp/: .clang-format  .gitignore  CMakeLists.txt  build.bat  build.sh  build_with_coverage.sh
cpp/include/: cache.hpp  cached_fn.hpp  can_permute_for_sum.hpp  complexity_matcher.hpp  count_ways_to_make_change.hpp  fibonacci_numbers.hpp  find_pair_by_sum.hpp  find_subarray_with_sum.hpp  frequency_queries.hpp  gcd.hpp  heapify.hpp  highway_cost_calculator.hpp  is_abbreviation.hpp  longest_common_subsequence.hpp  maximize_loot.hpp  maximum_advertisement_revenue.hpp  maximum_number_of_prizes.hpp  maximum_pairwise_product.hpp  maximum_salary.hpp  money_change.hpp  optional.hpp  p2d.hpp  primitive_calculator.hpp  race_min_time.hpp  rectangle.hpp  rectangles_intersect.hpp  remove_chars.hpp  reverse_words.hpp  running_median.hpp  sort_huge_numbers.hpp  sort_with_invertions_counting.hpp  surface_area.hpp
cpp/lib/gtest/: CMakeLists.txt
cpp/src/: can_permute_for_sum.cpp  complexity_matcher.cpp  count_ways_to_make_change.cpp  fibonacci_numbers.cpp  find_pair_by_sum.cpp  find_subarray_with_sum.cpp  frequency_queries.cpp  gcd.cpp  highway_cost_calculator.cpp  is_abbreviation.cpp  longest_common_subsequence.cpp  maximize_loot.cpp  maximum_advertisement_revenue.cpp  maximum_number_of_prizes.cpp  maximum_pairwise_product.cpp  maximum_salary.cpp  money_change.cpp  primitive_calculator.cpp  race_min_time.cpp  rectangles_intersect.cpp  remove_chars.cpp  reverse_words.cpp  sort_huge_numbers.cpp  sort_with_invertions_counting.cpp  surface_area.cpp
cpp/test/: cache_test.cpp  cached_fn_test.cpp  can_permute_for_sum_test.cpp  complexity_matcher_test.cpp  count_ways_to_make_change_test.cpp  fibonacci_numbers_test.cpp  find_pair_by_sum_test.cpp  find_subarray_with_sum_test.cpp  frequency_queries_test.cpp  gcd_test.cpp  heapify_test.cpp  highway_cost_calculator_test.cpp  is_abbreviation_test.cpp  longest_common_subsequence_test.cpp  maximize_loot_test.cpp  maximum_advertisement_revenue_test.cpp  maximum_number_of_prizes_test.cpp  maximum_pairwise_product_test.cpp  maximum_salary_test.cpp  money_change_test.cpp  optional_test.cpp  primitive_calculator_test.cpp  race_min_time_test.cpp  rectangles_intersect.cpp  rectangles_intersect_test.cpp  remove_chars_test.cpp  reverse_words_test.cpp  running_median_test.cpp  sort_huge_numbers_test.cpp  sort_with_invertions_counting_test.cpp  surface_area_test.cpp
cpp/test/helpers/: file_based_test_helper.hpp
cpp/test/test_resources/frequency_queries/: 01.result
java/: .gitignore  build.gradle  pom.xml  settings.gradle
java/gradle/wrapper/: gradle-wrapper.properties
java/src/main/java/jcstress/: ArrayBlockingQueueTest.java  BoundedLinkedLiteBlockingQueueTest.java  BoundedLinkedLiteBlockingQueueTest2.java  ConditionArrayBlockingQueueTest.java  ConditionArrayBlockingQueueTest2.java  LinkedLiteBlockingQueueTest.java
java/src/main/java/ru/nk/training/: ArrayRotator.java  AverageOfFibonacciNumbersFinder.java  BalancedBracketsChecker.java  BigInteger.java  BinarySearchTreeChecker.java  BinarySearcher.java  BinaryTreeCommonAncestorFinder.java  BinaryTreeFlattener.java  BinaryTreeHeightFinder.java  BinaryTreeLevelMapper.java  BinaryTreeRotator.java  (+34 more)
python/: .gitignore
python/src/: add_one_to_big_integer.py  can_rearrange_to_palindrom.py  count_luck.py  count_number_of_road_forks.py  count_patterns.py  count_possible_astronaut_pairs.py  count_segments_for_points.py  disjoint_set.py  evaluate_reverse_polish_notation.py  find_majority_element.py  get_recursive_digit_sum.py  graph.py  has_negative_cycle.py  is_bipartite.py  is_word_pattern.py  max_segment_intersections.py  max_stored_packages.py  merge_intersecting_segments.py  minimum_spanning_tree.py  number_coloring.py  parallel_processing.py  segment.py  shortest_path.py  subnumbers_sum.py  topological_sort.py  unbounded_knapsack.py  vertices_to_components.py
python/test/: BidirectionalGraphTest.py  add_one_to_big_integer_test.py  add_one_to_big_integer_tests.py  can_rearrange_to_palindrom_tests.py  count_number_of_road_forks_tests.py  count_patterns_tests.py  count_possible_astronaut_pairs_tests.py  count_segments_for_points_tests.py  disjoint_set_tests.py  evaluate_reverse_polish_notation_tests.py  find_majority_element_tests.py  get_recursive_digit_sum_tests.py  is_bipartite_tests.py  is_word_pattern_tests.py  matchers.py  max_segment_intersections_tests.py  max_stored_packages_tests.py  merge_intersecting_segments_tests.py  minimum_spanning_tree_tests.py  number_coloring_tests.py  parallel_processing_tests.py  subnumbers_sum_tests.py  topological_sort_tests.py  unbounded_knapsack_tests.py  undirected_graph_tests.py
src/main/java/ru/fox/training/: LeftRotation.java
src/main/java/ru/nk/training/: LruCache.java  RectangleIntersectionChecker.java  StarCounter.java  Trie.java
src/test/java/ru/fox/training/: LeftRotationTest.java
src/test/java/ru/nk/training/: LruCacheTest.java  RectangleIntersectionCheckerTest.java  TrieTest.java
(+124 files in other folders)
